# pyngpong

./: .gitignore  README.md  config.ini  pyproject.toml
pingpong/: __main__.py  game.py  network.py  server.py
