[tool.poetry]
name = "Ping-pong"
version = "0.1.0"
description = "Ponczek ping-pong game"
authors = ["k.kedzierski <kkedzierski@yosh.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
black = "^22.3.0"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
